refactor: 리스트 객체 반환 로직 간단화 및 api url 수정